--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="tac.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -26,6 +26,6 @@
         <div id="but"><button id="res">Reset / New Game</button></div>
         <div id="win"></div>
     </main>
-    <script src="toe.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
